# RemoveSSHClient

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Controllers/SSHController/: SSHController.cpp  SSHController.h  SSHControllerException.h
Model/SSHConnection/: SSHConnection.cpp  SSHConnection.h
View/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
